<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Notification Forwarder</string>
    <string name="resend">Renvoyer</string>
    <string name="settings">Paramètres</string>
    <string name="email_settings">Paramètres email</string>
    <string name="notification_settings">Paramètres notifications</string>
    <string name="email_address">Adresse email</string>
    <string name="smtp_server">Serveur SMTP</string>
    <string name="smtp_port">Port SMTP</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="save">Enregistrer</string>
    <string name="error_invalid_email">Adresse email invalide</string>
    <string name="forward_all_notifications">Transférer toutes les notifications</string>
    <string name="excluded_apps">Applications exclues</string>
    <string name="clear_notifications">Effacer les notifications</string>
    <string name="error_configuration">Configuration incomplète</string>
    <string name="error_email_sending">Erreur lors de l\'envoi de l\'email</string>
    <string name="error_network">Erreur de connexion réseau</string>
    <string name="error_database">Erreur de base de données</string>
    <string name="error_configuration_title">Configuration requise</string>
    <string name="error_configuration_message">Veuillez configurer les paramètres email avant d\'envoyer des notifications</string>
    <string name="permission_required">Permission requise</string>
    <string name="notification_permission_message">Cette application nécessite l\'accès aux notifications pour fonctionner</string>
    <string name="settings">Paramètres</string>
    <string name="cancel">Annuler</string>
    <string name="clear">Effacer</string>
    <string name="clear_notifications_message">Voulez-vous effacer les anciennes notifications ?</string>
    <string name="no_notifications">Aucune notification</string>
    <string name="no_notifications_description">Les notifications reçues apparaîtront ici</string>
</resources> 